<resources>
    <string name="app_name">CleanPVX</string>
    <string name="action_settings">Settings</string>
    <string name="product_component_label">Products:</string>
    <string name="title_activity_menu">Menu</string>
    <string name="menu_searchProducts">Search Products</string>
    <string name="menu_addProduct">Add product</string>
    <string name="menu_productComponent">Product component</string>
    <string name="title_activity_add_product">AddProduct</string>
    <string name="create_product">Create product</string>
    <string name="product_barcode">Product barcode:</string>
    <string name="product_name">Product name:</string>
    <string name="isVegan">Is vegan</string>
    <string name="error_empty_product_name">Insert product name!</string>
    <string name="product_created">Product created.</string>
    <string name="db_error">Lol db error :O</string>
    <string name="product_expiryDate">Expiry date:</string>
    <string name="app_DateFormat">dd/MM/yyyy</string>
</resources>
