<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="aethernadev.com.cleanpvx.Menu"
    tools:showIn="@layout/activity_menu">

    <Button
        android:id="@+id/menu_searchProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_searchProducts" />

    <Button
        android:id="@+id/menu_addProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_addProduct" />

    <Button
        android:id="@+id/menu_productComponent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_productComponent" />

</LinearLayout>
